Added some comments

--- a/LightFM.ipynb
+++ b/LightFM.ipynb
@@ -5713,6 +5713,8 @@
    "source": [
     "# opt_epochs_icp, opt_lr_icp, opt_no_components_icp, opt_item_alpha_icp, opt_user_alpha_icp = opt_icp_features.x\n",
     "\n",
+    "# I got these optimal hyperparamteres on an earlier skopt call \n",
+    "# but for some reason it couldn't find them the next couple calls around. Thankfully was able to copy/paste.\n",
     "opt_epochs_icp, opt_lr_icp, opt_no_components_icp, opt_item_alpha_icp, opt_user_alpha_icp = \\\n",
     "[51, 0.0040253901900726063, 158, 9.9999999999999995e-07, 9.9999999999999995e-07]"
    ]
