--- a/LightFM.ipynb
+++ b/LightFM.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "## Initial Setup + Train-Test Split\n",
     "------\n",
-    "First, import the interactions matrix, as well as ID-user/item mappings. Then, split the interactions matrix into training/test sets.\n",
+    "First, import the interactions matrix, ID-user/item mappings, and user/item feature arrays. Then, split the interactions matrix into random training/test sets.\n",
     "\n",
     "**Interaction matrix info:**\n",
     "* Rows: Users (ICPs), sorted by uidx (user index)\n",
@@ -16,7 +16,19 @@
     "* icp_to_uidx: ICP name (URL/domain) to user index\n",
     "* uidx_to_icp: User index to ICP name (URL/domain)\n",
     "* cdn_to_iidx: CDN code (3-digit) to item index\n",
-    "* iidx_to_cdn: Item index to CDN code (3-digit)"
+    "* iidx_to_cdn: Item index to CDN code (3-digit)\n",
+    "\n",
+    "**User (ICP) Features (One-Hot Vectors)**:\n",
+    "* ID (uidx)\n",
+    "* Industry code (4-digit)\n",
+    "* Total text bytes (binned by quartile)\n",
+    "* Total image bytes (binned by quartile)\n",
+    "* Total video bytes (binned by quartile)\n",
+    "\n",
+    "**Item (CDN) Features (One-Hot Vectors)**:\n",
+    "* CDN Code (3-digit)\n",
+    "* CDN Type (free/self-made/commercial)\n",
+    "* Number of CDN IP addresses (binned by quartile)"
    ]
   },
   {
@@ -248,7 +260,7 @@
    "source": [
     "## Initial Tests\n",
     "------\n",
-    "Run some initial tests using the methodology described in Ethan Rosenthal's \"LightFM for Sketchfab Recommendations\" blog. These plots didn't turn out great. As I found out later, this is because the plots were only starting from epoch 10, so they were missing out on most of the initial jump in performance. Also, didn't use hyperparameter optimization yet. This part was mostly a learning experience."
+    "Ran some initial tests using the methodology described in Ethan Rosenthal's \"LightFM for Sketchfab Recommendations\" blog. These plots didn't turn out great. As I found out later, this is because the plots were only starting from epoch 10, so they were missing out on most of the initial jump in performance. Also, I didn't use hyperparameter optimization yet, so the models were probably overfitting the training data. This part was mostly a learning experience."
    ]
   },
   {
@@ -856,11 +868,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Hyperparameter optimization\n",
+    "## Hyperparameter Optimization\n",
     "------\n",
     "Earlier plots aren't looking too great... let's try something new.\n",
     "\n",
-    "Here's what we'll do: we'll use skopt's bayesian-based GP (gaussian process) optimization to optimize our hyperparameters on the All-Features model first, and see how that performs. This will also make sure we properly regularize our features as well so we don't end up overfitting the training data -- which, looking at the previous plots, seems like we were doing to a pretty large extent. We'll also be sure to plot ALL our epochs, not just starting from 10 and then moving in increments of 10."
+    "Here's what we'll do: we'll use skopt's bayesian-based GP (gaussian process) optimization to optimize our hyperparameters on the All-Features model first, and see how that performs. This will also make sure we properly regularize our features as well so we don't end up overfitting the training data -- which, looking at the previous plots, seems like we were doing to a pretty large extent. We'll also be sure to plot ALL our epochs, not just starting from 10 and then moving in increments of 10.\n",
+    "\n",
+    "(Apologies in advance for GitHub showing the entire verbose output logs without any built-in scrolling.)"
    ]
   },
   {
@@ -2323,18 +2337,18 @@
     "------\n",
     "See what inputted user/item features allows our RecSys to perform the best after being optimized. Select the best model to continue evaluating moving forward.\n",
     "\n",
-    "Models Tested:\n",
-    "1. All Features (already done)\n",
-    "2. No Features\n",
-    "3. User (ICP) Features Only\n",
-    "4. Item (CDN) Features Only"
+    "#### Models Tested:\n",
+    "1. All Features -  Hybrid (See Above)\n",
+    "2. No Features - Pure Collaborative-Filtering\n",
+    "3. User (ICP) Features Only - Hybrid\n",
+    "4. Item (CDN) Features Only - Hybrid"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### No Features"
+    "### No Features (Pure Collaborative-Filtering)"
    ]
   },
   {
@@ -3450,7 +3464,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### ICP Features Only"
+    "### ICP Features Only (Hybrid)"
    ]
   },
   {
@@ -4568,7 +4582,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### CDN Features Only"
+    "### CDN Features Only (Hybrid)"
    ]
   },
   {
@@ -5693,7 +5707,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**And the winner is: ICP features only!** Time to evaluate its performance more in depth."
+    "**And the winner is: ICP features only!** Looks like the ICP features are indeed valuable for the model. In fact, removing the CDN features from the All-Features model and just leaving the ICP features improved our performance in both p@k and AUC. Next step is to evaluate the best-performing ICP Features Only model more in-depth."
    ]
   },
   {
@@ -6301,7 +6315,7 @@
    "source": [
     "The result: meaningful learning in both the warm-start and cold-start domains.\n",
     "\n",
-    "Now try the same for no_features."
+    "Now try the same for the no-features, pure collaborative-filtering model."
    ]
   },
   {
