Edited interactions preprocessing

--- a/Read_Interactions.ipynb
+++ b/Read_Interactions.ipynb
@@ -1,6 +1,20 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## ICP-CDN Interaction Preprocessing\n",
+    "\n",
+    "* Go through raw data, keep track of which ICPs have used CDNs. \n",
+    "  * Store results in an interactions matrix of dimension: num_users x num_items. \n",
+    "  * Nonzero entries represent a recorded interaction.\n",
+    "* Maintain user (ICP)/item (CDN) to index mappings to remember which rows/columns correspond to which ICPs/CDNs.\n",
+    "\n",
+    "(Raw data table hidden for future research purposes)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
@@ -660,7 +674,7 @@
     }
    ],
    "source": [
-    "# See how many different CDNs each ICP has used (num. different interactions)\n",
+    "# Just out of curiosity: See how many different CDNs each ICP has used (num. different interactions)\n",
     "max_num_cdns = max(interactions_remaining.getnnz(1))\n",
     "CDN_counts = np.zeros(max_num_cdns+1).astype(np.int32)\n",
     "\n",
