Edited CDN preprocessing notebook

--- a/Read_CDN_Features.ipynb
+++ b/Read_CDN_Features.ipynb
@@ -1,6 +1,22 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Item (CDN) Features Preprocessing\n",
+    "\n",
+    "**Input:** Raw data tables/logs (hidden for future research purposes)\n",
+    "\n",
+    "**Output:** Array of CDN feature vectors in one-hot format\n",
+    "\n",
+    "**Features used:**\n",
+    "* Unique CDN code\n",
+    "* CDN type (free/self-made/commercial)\n",
+    "* Number of CDN IP addresses (binned by quartile)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
@@ -282,7 +298,9 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "cdn_temp_dns_filepath = '~/Desktop/CDN Data/cdn_temp_dns/000009_0'\n",
@@ -484,7 +502,9 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "cdn_temp_qos_filepath = '~/Desktop/CDN Data/cdn_temp_qos/000004_0'\n",
@@ -765,7 +785,9 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "cdn_num_ips_df = cdn_num_ips.to_frame()"
@@ -794,7 +816,9 @@
   {
    "cell_type": "code",
    "execution_count": 110,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "num_ips_q1 = 0\n",
@@ -822,7 +846,9 @@
   {
    "cell_type": "code",
    "execution_count": 113,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "for entry in cdn_num_ips_df.itertuples():\n",
