--- a/Read_Interactions.ipynb
+++ b/Read_Interactions.ipynb
@@ -6,12 +6,12 @@
    "source": [
     "## ICP-CDN Interaction Preprocessing\n",
     "\n",
-    "* Go through raw data, keep track of which ICPs have used CDNs. \n",
-    "  * Store results in an interactions matrix of dimension: num_users x num_items. \n",
-    "  * Nonzero entries represent a recorded interaction.\n",
-    "* Maintain user (ICP)/item (CDN) to index mappings to remember which rows/columns correspond to which ICPs/CDNs.\n",
+    "**Input:** Raw data table (hidden for future research purposes)\n",
     "\n",
-    "(Raw data table hidden for future research purposes)"
+    "**Output:** Interactions matrix of dimension: num_users x num_items\n",
+    "* Go through raw data, keep track of which ICPs have used which CDNs\n",
+    "* Nonzero entries represent a recorded interaction\n",
+    "* Maintain *ICP-userindex* and *CDN-itemindex* mappings to remember which rows/columns correspond to which ICPs/CDNs"
    ]
   },
   {
