Got more AUC, warm/cold results

--- a/LightFM.ipynb
+++ b/LightFM.ipynb
@@ -1992,7 +1992,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 419,
+   "execution_count": 710,
    "metadata": {},
    "outputs": [
     {
@@ -2013,91 +2013,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 420,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 715,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<lightfm.lightfm.LightFM at 0x11181c1d0>"
+      ]
+     },
+     "execution_count": 715,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "# Re-train optimal all-features model\n",
     "opt_model_all = LightFM(loss='warp',\n",
     "                   random_state=2016,\n",
     "                   learning_rate=opt_lr_all,\n",
     "                   no_components=opt_no_components_all,\n",
     "                   user_alpha=opt_user_alpha_all,\n",
-    "                   item_alpha=opt_item_alpha_all)"
+    "                   item_alpha=opt_item_alpha_all)\n",
+    "opt_model_all.fit(train, user_features=icp_features, item_features=cdn_features, epochs=opt_epochs_all)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 422,
+   "execution_count": 716,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0.041286863"
-      ]
-     },
-     "execution_count": 422,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "All Features Optimal p@5: 0.157641\n",
+      "All Features Optimal AUC: 0.891078\n"
+     ]
     }
    ],
    "source": [
-    "opt_model_all.fit(train, user_features=icp_features, item_features=cdn_features, epochs=0)\n",
-    "\n",
-    "# Before training\n",
-    "lightfm.evaluation.precision_at_k(opt_model_all, test,\n",
-    "                                             item_features=cdn_features,\n",
+    "# Evaluate optimal CDN-features-only model\n",
+    "all_opt_patk = lightfm.evaluation.precision_at_k(opt_model_all, test,\n",
     "                                             user_features=icp_features,\n",
-    "                                             train_interactions=None,\n",
-    "                                             k=5).mean()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 423,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<lightfm.lightfm.LightFM at 0x111ccba90>"
-      ]
-     },
-     "execution_count": 423,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Train\n",
-    "opt_model_all.fit(train, user_features=icp_features, item_features=cdn_features, epochs=opt_epochs)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 424,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.1469169"
-      ]
-     },
-     "execution_count": 424,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# After training\n",
-    "lightfm.evaluation.precision_at_k(opt_model_all, test,\n",
     "                                             item_features=cdn_features,\n",
-    "                                             user_features=icp_features,\n",
     "                                             train_interactions=None,\n",
-    "                                             k=5).mean()"
+    "                                             k=5).mean()\n",
+    "all_opt_auc = lightfm.evaluation.auc_score(opt_model_all, test,\n",
+    "                                             user_features=icp_features,\n",
+    "                                             item_features=cdn_features,\n",
+    "                                             train_interactions=None\n",
+    "                                             ).mean()\n",
+    "print \"All Features Optimal p@5: \" + str(all_opt_patk)\n",
+    "print \"All Features Optimal AUC: \" + str(all_opt_auc)"
    ]
   },
   {
@@ -3461,6 +3429,60 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 693,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<lightfm.lightfm.LightFM at 0x113f5ad90>"
+      ]
+     },
+     "execution_count": 693,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Re-train optimal no-features model\n",
+    "opt_epochs_none, opt_lr_none, opt_no_components_none, opt_item_alpha_none, opt_user_alpha_none = opt_no_features.x\n",
+    "opt_model_none = LightFM(loss='warp',\n",
+    "                       random_state=2016,\n",
+    "                       learning_rate=opt_lr_none,\n",
+    "                       no_components=opt_no_components_none,\n",
+    "                       user_alpha=opt_user_alpha_none,\n",
+    "                       item_alpha=opt_item_alpha_none)\n",
+    "opt_model_none.fit(train, epochs=opt_epochs_none)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 694,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No Features Optimal p@5: 0.157105\n",
+      "No Features Optimal AUC: 0.887442\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Evaluate optimal CDN-features-only model\n",
+    "none_opt_patk = lightfm.evaluation.precision_at_k(opt_model_none, test,\n",
+    "                                             train_interactions=None,\n",
+    "                                             k=5).mean()\n",
+    "none_opt_auc = lightfm.evaluation.auc_score(opt_model_none, test,\n",
+    "                                             train_interactions=None\n",
+    "                                             ).mean()\n",
+    "print \"No Features Optimal p@5: \" + str(none_opt_patk)\n",
+    "print \"No Features Optimal AUC: \" + str(none_opt_auc)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -4576,6 +4598,77 @@
    "source": [
     "print opt_icp_features.x\n",
     "print opt_icp_features.fun"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# opt_epochs_icp, opt_lr_icp, opt_no_components_icp, opt_item_alpha_icp, opt_user_alpha_icp = opt_icp_features.x\n",
+    "\n",
+    "# I got these optimal hyperparamteres on an earlier skopt call \n",
+    "# but for some reason it couldn't find them the next couple calls around. Thankfully was able to copy/paste.\n",
+    "opt_epochs_icp, opt_lr_icp, opt_no_components_icp, opt_item_alpha_icp, opt_user_alpha_icp = \\\n",
+    "[51, 0.0040253901900726063, 158, 9.9999999999999995e-07, 9.9999999999999995e-07]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 699,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<lightfm.lightfm.LightFM at 0x11cd26150>"
+      ]
+     },
+     "execution_count": 699,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Re-train optimal ICP-features-only model\n",
+    "opt_model_icp = LightFM(loss='warp',\n",
+    "                       random_state=2016,\n",
+    "                       learning_rate=opt_lr_icp,\n",
+    "                       no_components=opt_no_components_icp,\n",
+    "                       user_alpha=opt_user_alpha_icp,\n",
+    "                       item_alpha=opt_item_alpha_icp)\n",
+    "opt_model_icp.fit(train, epochs=opt_epochs_icp, user_features=icp_features)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 700,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ICP Features Only Optimal p@5: 0.158713\n",
+      "ICP Features Only Optimal AUC: 0.891215\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Evaluate optimal ICP-features-only model\n",
+    "icp_opt_patk = lightfm.evaluation.precision_at_k(opt_model_icp, test,\n",
+    "                                             user_features=icp_features,\n",
+    "                                             train_interactions=None,\n",
+    "                                             k=5).mean()\n",
+    "icp_opt_auc = lightfm.evaluation.auc_score(opt_model_icp, test,\n",
+    "                                             user_features=icp_features,\n",
+    "                                             train_interactions=None\n",
+    "                                             ).mean()\n",
+    "print \"ICP Features Only Optimal p@5: \" + str(icp_opt_patk)\n",
+    "print \"ICP Features Only Optimal AUC: \" + str(icp_opt_auc)"
    ]
   },
   {
@@ -5697,10 +5790,66 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 701,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<lightfm.lightfm.LightFM at 0x11cd26f90>"
+      ]
+     },
+     "execution_count": 701,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Re-train optimal CDN-features-only model\n",
+    "opt_epochs_cdn, opt_lr_cdn, opt_no_components_cdn, opt_item_alpha_cdn, opt_user_alpha_cdn = opt_cdn_features.x\n",
+    "opt_model_cdn = LightFM(loss='warp',\n",
+    "                       random_state=2016,\n",
+    "                       learning_rate=opt_lr_cdn,\n",
+    "                       no_components=opt_no_components_cdn,\n",
+    "                       user_alpha=opt_user_alpha_cdn,\n",
+    "                       item_alpha=opt_item_alpha_cdn)\n",
+    "opt_model_cdn.fit(train, epochs=opt_epochs_cdn, item_features=cdn_features)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 702,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CDN Features Only Optimal p@5: 0.157105\n",
+      "CDN Features Only Optimal AUC: 0.889017\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Evaluate optimal CDN-features-only model\n",
+    "cdn_opt_patk = lightfm.evaluation.precision_at_k(opt_model_cdn, test,\n",
+    "                                             item_features=cdn_features,\n",
+    "                                             train_interactions=None,\n",
+    "                                             k=5).mean()\n",
+    "cdn_opt_auc = lightfm.evaluation.auc_score(opt_model_cdn, test,\n",
+    "                                             item_features=cdn_features,\n",
+    "                                             train_interactions=None\n",
+    "                                             ).mean()\n",
+    "print \"CDN Features Only Optimal p@5: \" + str(cdn_opt_patk)\n",
+    "print \"CDN Features Only Optimal AUC: \" + str(cdn_opt_auc)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Exactly the same as with no features at all! Looks like our current CDN features aren't really helping. Perhaps they're simply giving the model more noise than anything else. If I had more time, I'd want to look into how to use feature-engineering to pick some better features for the CDNs. For now, we'll just toss them."
+    "The CDN-features-only p@k was exactly the same as with no features at all! Looks like our current CDN features aren't really helping. Perhaps they're simply giving the model more noise than anything else. If I had more time, I'd want to look into how to use feature-engineering to pick some better features for the CDNs. For now, we'll just toss them."
    ]
   },
   {
@@ -5725,10 +5874,7 @@
    },
    "outputs": [],
    "source": [
-    "# opt_epochs_icp, opt_lr_icp, opt_no_components_icp, opt_item_alpha_icp, opt_user_alpha_icp = opt_icp_features.x\n",
-    "\n",
-    "# I got these optimal hyperparamteres on an earlier skopt call \n",
-    "# but for some reason it couldn't find them the next couple calls around. Thankfully was able to copy/paste.\n",
+    "# Use optimal hyperparameters\n",
     "opt_epochs_icp, opt_lr_icp, opt_no_components_icp, opt_item_alpha_icp, opt_user_alpha_icp = \\\n",
     "[51, 0.0040253901900726063, 158, 9.9999999999999995e-07, 9.9999999999999995e-07]"
    ]
@@ -6452,7 +6598,100 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this case (with no features), cold start recommendations simply recommend the most popular items (based on item biases). We can see that icp_features outperform no_features in the cold-start problem, meaning that **the model is outperorming a simple popularity-based recommender**. Our icp_features model also outperforms the no_features model in the warm-start problem, meaning that the **features are indeed adding meaningful information** to the original collaborative filtering info. Good stuff!"
+    "In this case (with no features), cold start recommendations simply recommend the most popular items (based on item biases). We can see that icp_features outperform no_features in the cold-start problem, meaning that **the model is outperorming a simple popularity-based recommender**. Our icp_features model also outperforms the no_features model in the warm-start problem, meaning that the **features are indeed adding meaningful information** to the original collaborative filtering info. Good stuff!\n",
+    "\n",
+    "For the sake of being thorough, let's run this warm-start vs. cold-start test on the remaining models as well: CDN-features-only, and all-features."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 704,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CDN Features Only Warm p@5: 0.159833\n",
+      "CDN Features Only Cold p@5: 0.152239\n",
+      "CDN Features Only Warm AUC: 0.88106\n",
+      "CDN Features Only Cold AUC: 0.903208\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Evaluate optimal CDN-features-only model (already trained from earlier)\n",
+    "cdn_patk_warm = lightfm.evaluation.precision_at_k(opt_model_cdn, test_warm,\n",
+    "                                             item_features=cdn_features,\n",
+    "                                             train_interactions=None,\n",
+    "                                             k=5).mean()\n",
+    "cdn_patk_cold = lightfm.evaluation.precision_at_k(opt_model_cdn, test_cold,\n",
+    "                                             item_features=cdn_features,\n",
+    "                                             train_interactions=None,\n",
+    "                                             k=5).mean()\n",
+    "cdn_auc_warm = lightfm.evaluation.auc_score(opt_model_cdn, test_warm,\n",
+    "                                             item_features=cdn_features,\n",
+    "                                             train_interactions=None\n",
+    "                                             ).mean()\n",
+    "cdn_auc_cold = lightfm.evaluation.auc_score(opt_model_cdn, test_cold,\n",
+    "                                             item_features=cdn_features,\n",
+    "                                             train_interactions=None\n",
+    "                                             ).mean()\n",
+    "print \"CDN Features Only Warm p@5: \" + str(cdn_patk_warm)\n",
+    "print \"CDN Features Only Cold p@5: \" + str(cdn_patk_cold)\n",
+    "print \"CDN Features Only Warm AUC: \" + str(cdn_auc_warm)\n",
+    "print \"CDN Features Only Cold AUC: \" + str(cdn_auc_cold)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 718,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "All Features Warm p@5: 0.156485\n",
+      "All Features Cold p@5: 0.159701\n",
+      "All Features Warm AUC: 0.882735\n",
+      "All Features Cold AUC: 0.905957\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Evaluate optimal all-features model (already trained from earlier)\n",
+    "all_patk_warm = lightfm.evaluation.precision_at_k(opt_model_all, test_warm,\n",
+    "                                             user_features=icp_features,\n",
+    "                                             item_features=cdn_features,\n",
+    "                                             train_interactions=None,\n",
+    "                                             k=5).mean()\n",
+    "all_patk_cold = lightfm.evaluation.precision_at_k(opt_model_all, test_cold,\n",
+    "                                             user_features=icp_features,\n",
+    "                                             item_features=cdn_features,\n",
+    "                                             train_interactions=None,\n",
+    "                                             k=5).mean()\n",
+    "all_auc_warm = lightfm.evaluation.auc_score(opt_model_all, test_warm,\n",
+    "                                             user_features=icp_features,\n",
+    "                                             item_features=cdn_features,\n",
+    "                                             train_interactions=None\n",
+    "                                             ).mean()\n",
+    "all_auc_cold = lightfm.evaluation.auc_score(opt_model_all, test_cold,\n",
+    "                                             user_features=icp_features,\n",
+    "                                             item_features=cdn_features,\n",
+    "                                             train_interactions=None\n",
+    "                                             ).mean()\n",
+    "print \"All Features Warm p@5: \" + str(all_patk_warm)\n",
+    "print \"All Features Cold p@5: \" + str(all_patk_cold)\n",
+    "print \"All Features Warm AUC: \" + str(all_auc_warm)\n",
+    "print \"All Features Cold AUC: \" + str(all_auc_cold)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Not entirely sure why the all-features model has higher scores in the cold-start case than in the warm-start case... Perhaps it's just random chance? More data would certainly be helpful to try to figure this out."
    ]
   },
   {
