Added pickle dumps for hyperparams, models

--- a/LightFM.ipynb
+++ b/LightFM.ipynb
@@ -7019,6 +7019,54 @@
     "\n",
     "It would definitely be interesting to see something like this recommender system applied to US-based content providers as well. If I had more time, I would also like to do some more feature-engineering on both the ICP and CDN features to see what features actually allow the model to improve its recommendations. As a proof-of-concept, though, this initial CDN recommender system project seems like a pretty good first step!"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Save Optimal Hyperparameters + Models"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 724,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Save optimal hyperparameters\n",
+    "opt_hyperparams_all = (opt_epochs_all, opt_lr_all, opt_no_components_all, opt_item_alpha_all, opt_user_alpha_all)\n",
+    "opt_hyperparams_none = (opt_epochs_none, opt_lr_none, opt_no_components_none, opt_item_alpha_none, opt_user_alpha_none)\n",
+    "opt_hyperparams_icp = (opt_epochs_icp, opt_lr_icp, opt_no_components_icp, opt_item_alpha_icp, opt_user_alpha_icp)\n",
+    "opt_hyperparams_cdn = (opt_epochs_cdn, opt_lr_cdn, opt_no_components_cdn, opt_item_alpha_cdn, opt_user_alpha_cdn)\n",
+    "\n",
+    "# Save optimal models\n",
+    "with open('20170714-opt-hyperparams.pkl', 'w') as output:\n",
+    "    pickle.dump((opt_hyperparams_all, opt_hyperparams_none, opt_hyperparams_icp, opt_hyperparams_cdn), output, -1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 721,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Save optimal models\n",
+    "with open('20170714-opt-models.pkl', 'w') as output:\n",
+    "    pickle.dump((opt_model_all, opt_model_none, opt_model_icp, opt_model_cdn), output, -1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
